[package]
name = "ethnum"
version = "1.5.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "256-bit integer implementation"
documentation = "https://docs.rs/ethnum"
readme = "README.md"
homepage = "https://github.com/nlordell/ethnum-rs"
repository = "https://github.com/nlordell/ethnum-rs"
license = "MIT OR Apache-2.0"
keywords = ["integer", "u256", "ethereum"]
categories = ["cryptography::cryptocurrencies", "mathematics", "no-std"]

[package.metadata.docs.rs]
features = ["serde"]

[workspace]
members = [
  "bench",
  "fuzz",
  "intrinsics",
]

[features]
default = ["cosmos"]
llvm-intrinsics = ["ethnum-intrinsics"]
# Custom additions
arbitrary = ["dep:arbitrary", "std"]
cosmos = ["dep:cosmwasm-std"]
proptest = ["dep:proptest", "std"]
std = []

[dependencies]
ethnum-intrinsics = { version = "=1.2.0", path = "intrinsics", optional = true }
serde = { version = "1", default-features = false, optional = true }
cosmwasm-std = { version = "1.5", optional = true }
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
proptest = { version = "1.2", optional = true }